--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
  <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia alura</title>
- </head>
- <body>
-    <h1>Sobre a Barbearia Alura</h1>
-    <h2>Sobre a Barbearia Alura</h2>
-    <h3>Sobre a Barbearia Alura</h3>
-    <h4>Sobre a Barbearia Alura</h4> 
-    <h5>Sobre a Barbearia Alura</h5>
-    <h6>Sobre a barbearia Alura</h6>
-      
- </body>
- </html>
+ <html lang="pt-br">
+<meta charset="UTF-8">
+<title>Barbearia Alura </title>
+</html>
