--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
- <!DOCTYPE html>
- <html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <title>Barbearia Alura </title>
 </head>
 <body>
 <h1> Sobre a Barbearia Alura</h1>
-<p> localizada mo coração da cidade</p>
+<p> localizada mo coração da cidade, a Barbearia Alura trás para o mercado  o que há  de melhor para seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+<p>Nossa misao é:" proporcionar a auta-estima é qualidade de vida aos clientes". </p>
+
+<p>Oferecemos profissionais experientes e antenados as mudanças da moda. O atendimento possui padrão de excelencia e agilidade, garantindo qualidade e satisfação dos clientes</p>
 </body>
 </html>
