--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="banner[1].jpg" alt="foto da barbearia">
 <h1> A Berbearia Alura </h1>
 <p> localizada no coração da cidade, a <strong> Barbearia Alura </strong>trás para o mercado  o que há  de melhor para seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 <p>Nossa misao é:"<em><strong> proporcionar a auta-estima é qualidade de vida aos clientes".</strong></em></p>
