--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 <meta charset="UTF-8">
 <title>Barbearia Alura </title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <img class="banner" src="banner[1].jpg" alt="foto da barbearia">
-<h1> A Barbearia Alura </h1>
-<p> localizada no coração da cidade, a <strong> Barbearia Alura </strong>trás para o mercado  o que há  de melhor para seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-<p>Nossa misao é:"<em><strong> proporcionar a auta-estima é qualidade de vida aos clientes".</strong></em></p>
 
-<p>Oferecemos profissionais experientes e antenados as mudanças da moda. O atendimento possui padrão de excelencia e agilidade, garantindo qualidade e satisfação dos clientes</p>
+<body>
+<img class="banner" src="banner[1].jpg" alt="foto da barbearia">
+<h1> A Barbearia Alura </h1>
+<p> localizada no coração da cidade, a <strong> Barbearia Alura </strong>trás para o mercado o que há de melhor para
+        seu cabelo e barba. Fundada em 2019, a barbearia Alura já é destaque na cidade e conquista novos clientes a cada
+        dia.</p>
+ <p>Nossa misao é:"<em><strong> proporcionar a auta-estima é qualidade de vida aos clientes".</strong></em></p>
+ <p>Oferecemos profissionais experientes e antenados as mudanças da moda. O atendimento possui padrão de excelencia e
+        agilidade, garantindo qualidade e satisfação dos clientes</p>
+ <div>
+<h2>beneficios </h2>
+ <ul>
+<li>atendimento aos clientes </li>
+<li>Localização</li>
+<li>Espaço diferenciado </li>
+<li>Proficionais diferenciado</li>
+ </ul>
+</div>
 </body>
 </html>
