--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <div>
 <h2>beneficios </h2>
  <ul>
-<li>atendimento aos clientes </li>
+<li>Atendimento aos clientes </li>
 <li>Localização</li>
 <li>Espaço diferenciado </li>
 <li>Proficionais diferenciado</li>
