--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <li>Atendimento aos clientes </li>
 <li>Localização</li>
 <li>Espaço diferenciado </li>
-<li>Proficionais diferenciado</li>
+<li>Profissionais diferenciado</li>
  </ul>
 </div>
 </body>
